--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,7 @@
 /* Created by: Julienka Sohal
-* Created on: Sep 2020
+* Created on: Oct 2022
 * This file contains the CSS for index.html
 */
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
 
 .mdl-layout__header-row {
   align-items: center;
@@ -28,14 +22,12 @@ body {
 }
 
 body {
-  background-color: lightsteelblue;
+  background-color: cornflowerblue;
 }
 
-.demo-list-item {
-  width: 300px;
-}
-
-#images {
-  width: 300px;
-  height: 157px;
+p {
+  color: white;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.5rem;
+  padding-top: 5pt;
 }
